--- a/Домашняя_работа_1.ipynb
+++ b/Домашняя_работа_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMD2fmRPfy5+zdH4Pf7rZ+",
+      "authorship_tag": "ABX9TyO37jzHO4ivMbC+FybcUn0z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -200,7 +200,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Задание 7: доделать"
+        "Задание 7:"
       ],
       "metadata": {
         "id": "6pkLyu_WoQYc"
@@ -213,7 +213,6 @@
         "  def sound(self):\n",
         "    print('bell')\n",
         "\n",
-        "import LittleBell\n",
         "\n",
         "bell = LittleBell()\n",
         "bell.sound()"
@@ -223,6 +222,16 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Остаточные знания:*\n",
+        "Опыт: самые зачаточные знания в программировании на Python и на R. Не совсем понял как необходимо выполнить 7 задание, а так же как происходит создание и импорт класса."
+      ],
+      "metadata": {
+        "id": "8AdaKFAicpoK"
+      }
     }
   ]
 }
