Создано с помощью Colaboratory

--- a/Домашняя_работа_1.ipynb
+++ b/Домашняя_работа_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO37jzHO4ivMbC+FybcUn0z",
+      "authorship_tag": "ABX9TyNxmPJ5ZPQP4kwzIFk/bqid",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -227,7 +227,8 @@
       "cell_type": "markdown",
       "source": [
         "*Остаточные знания:*\n",
-        "Опыт: самые зачаточные знания в программировании на Python и на R. Не совсем понял как необходимо выполнить 7 задание, а так же как происходит создание и импорт класса."
+        "Опыт: самые зачаточные знания в программировании на Python и на R.\n",
+        "Не совсем понял как необходимо выполнить 7 задание, а так же как происходит создание и импорт класса."
       ],
       "metadata": {
         "id": "8AdaKFAicpoK"
