Создано с помощью Colaboratory

--- a/Лабораторная_1.ipynb
+++ b/Лабораторная_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPYPTIAjE20oh1SZCu8IPU",
+      "authorship_tag": "ABX9TyPm9SPlhgzhOEwaVYHgSg5+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,38 +40,37 @@
       "source": [
         "class Pupa():\n",
         "    def __init__(self):\n",
-        "        self.salary = 0\n",
+        "        self.salary = 0   # ЗП в начале месяца у Пупы\n",
         "\n",
-        "    def do_work(self, spisok1, spisok2):\n",
+        "    def do_work(self, spisok1, spisok2):   # работа Пупы со списками\n",
         "        summa = []\n",
         "        for i in range(len(spisok1)):\n",
         "            s_el = spisok1[i] + spisok2[i]\n",
         "            summa.append(s_el)\n",
         "        print('Pupa list', summa)\n",
         "\n",
-        "    def take_salary(self, accrual):\n",
-        "        self.salary = self.salary + (accrual * 3)\n",
+        "    def take_salary(self, accrual):   # начисление ЗП для Пупы\n",
+        "        self.salary = self.salary + (accrual * 3)   # 3 коэффициент ЗП для Лупы\n",
         "        print('Pupa salary', self.salary)\n",
         "\n",
         "class Lupa():\n",
         "    def __init__(self):\n",
-        "        self.salary = 0\n",
+        "        self.salary = 0   # ЗП в начале месяца у Лупы\n",
         "\n",
-        "    def do_work(self, spisok1, spisok2):\n",
+        "    def do_work(self, spisok1, spisok2):   # работа Лупы со списками\n",
         "        differ = []\n",
         "        for i in range(len(spisok1)):\n",
         "            d_el = spisok1[i] - spisok2[i]\n",
         "            differ.append(d_el)\n",
         "        print('Lupa list', differ)\n",
         "\n",
-        "    def take_salary(self, accrual):\n",
-        "        self.salary = self.salary + (accrual * 4)\n",
+        "    def take_salary(self, accrual):   # начисление ЗП для Лупы\n",
+        "        self.salary = self.salary + (accrual * 4)   # 4 коэффициент ЗП для Лупы\n",
         "        print('Lupa salary', self.salary)\n",
         "\n",
         "class Accountant():\n",
         "    def give_salary(self, worker):\n",
-        "        worker.take_salary(5)\n",
-        "\n"
+        "        worker.take_salary(5)   # плата за один экземпляр работы\n"
       ],
       "metadata": {
         "id": "053otNSHQBI0"
@@ -96,9 +95,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QiiX8xLgkvns",
-        "outputId": "24681a66-4e32-4017-f007-0e8bdfe38807"
+        "outputId": "06e15995-67d0-4d2c-fe80-12c15c252dcf"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
