Создано с помощью Colaboratory

--- a/Лабораторная_1.ipynb
+++ b/Лабораторная_1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPm9SPlhgzhOEwaVYHgSg5+",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPm9SPlhgzhOEwaVYHgSg5+"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/VovaPopov/NSU-ML-and-DL/blob/main/%D0%9B%D0%B0%D0%B1%D0%BE%D1%80%D0%B0%D1%82%D0%BE%D1%80%D0%BD%D0%B0%D1%8F_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -75,7 +64,7 @@
       "metadata": {
         "id": "053otNSHQBI0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +86,7 @@
         "id": "QiiX8xLgkvns",
         "outputId": "06e15995-67d0-4d2c-fe80-12c15c252dcf"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
